Fix pagination at some pages

--- a/frontend/src/scss/_labels.scss
+++ b/frontend/src/scss/_labels.scss
@@ -26,4 +26,8 @@
   &.label-info {
     @include label-variant($info-color, $info-color-light);
   }
+
+  &.label-notice {
+    @include label-variant($notice-color, $notice-color-light);
+  }
 }
