Fix template views a bit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 <meta name="twitter:title" content="Punch">
 <meta name="twitter:description" content="Punch description">
 <meta name="twitter:image" content="<%= asset_url('og.png') %>">
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 
 <link rel="shortcut icon" type="image/x-icon" href="<%= asset_url('favicon.ico') %>">
 <link rel="apple-touch-icon" sizes="180x180" href="<%= asset_url('icon_180x180.png') %>">
