--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -25,7 +25,7 @@
 <meta name="twitter:title" content="<%= yield(:page_title) %>">
 <meta name="twitter:description" content="<%= yield(:page_description) %>">
 <meta name="twitter:image" content="<%= asset_url('og.png') %>">
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 
 <link rel="shortcut icon" type="image/x-icon" href="<%= asset_url('favicon.ico') %>">
 <link rel="apple-touch-icon" sizes="180x180" href="<%= asset_url('icon_180x180.png') %>">
