--- a/app/assets/stylesheets/modules/_features.scss
+++ b/app/assets/stylesheets/modules/_features.scss
@@ -60,7 +60,7 @@
       }
 
       ul {
-        list-style-image: url('icon_tick.svg');
+        list-style-image: asset_url('icon_tick.svg');
 
         li {
           padding-left: .5rem;
