--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -36,6 +36,10 @@
 
       &:not(:first-of-type) {
         margin-left: 1.2rem;
+
+        @include respond-to-xs-mobile() {
+          margin-left: .5rem;
+        }
       }
     }
 
