--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -49,5 +49,6 @@ window.LANG = '<%= I18n.locale %>'
 <%= yield(:footer) %>
 
 <%= javascript_include_tag('application') %>
+<%= yield(:js) %>
 </body>
 </html>
