--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -10,6 +10,10 @@
 <%= render 'shared/footer' %>
 <% end %>
 
+<% content_for(:js) do %>
+<%= render 'shared/chat_tawk_to' %>
+<% end %>
+
 <div id="main" class="main main-mt-0">
   <div class="hero bg-linear-blue">
     <div class="container">
