--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'Punch') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_title, 'Privacy Policy | Punch') %>
+<%= provide(:page_description, 'Punch Privacy Policy') %>
 <%= provide(:page_url, privacy_url) %>
 
 <% content_for(:header) do %>
@@ -17,38 +17,97 @@
       <ol>
         <li>
           <div>
-            <h4>Privacy policy A</h4>
-            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p>1PAC Vietnam Co.,LTD. (“1PAC Company”) is committed to protecting the privacy of people who visit  1PAC Company’s Web sites (“Visitors”), companies and their end users who register to use the 1PAC Company Services as defined below (“Customers”).</p>
+            <p>This Privacy Policy describes 1PAC Company’s privacy practices as you pertain to the use of the 1PAC Company’s Website and the related application, mobile application, services, or event offered by of related to 1PAC Company (together , the “Service”).</p>
+            <p>Additional terms related to Privacy may be addressed in the applicable Terms and Conditions related to your or your 1PAC Company’s use of the Product (defined below). In this Policy, the terms “we”, “us”, or “our” refer to 1PAC Company.</p>
           </div>
         </li>
         <li>
           <div>
-            <h4>Privacy policy B</h4>
-            <ul>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-              <li>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</li>
-            </ul>
+            <h4>1. Overview</h4>
+            <p>Punch is a business software solution that allows for rapid iteration on management strategy and execution using attendance statistic reporting and performance tracking methodologies. Punch is a product legally owned by 1PAC Company.</p>
           </div>
         </li>
         <li>
           <div>
-            <h4>Privacy policy C</h4>
-            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <ul>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-            </ul>
+            <h4>2. Website Covered</h4>
+            <p>This Privacy Policy applies to the Web sites that link to this Privacy Policy, including: <a href="https://www.punch.com">https://www.punch.com</a> and <a href="https://support.unch.com">https://support.punch.com</a>, Punch (collectively referred to as “1PAC Company Web sites” or “Product(s)”).</p>
           </div>
         </li>
         <li>
           <div>
-            <h4>Privacy policy D</h4>
-            <p>Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <ul>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-              <li>Is simply dummy text of the printing and typesetting industry.</li>
-            </ul>
+            <h4>3. Information We Collect</h4>
+            <b>Account Information</b>
+            <p>When you create an account on Punch through your company Punch Administrator’s invitation, we collect and store information about you including your name, profile picture, title, email address, and password (together, your “Personal Information”), also information about IP address, operating systems, browsers or information browsers send to server (together, your “Technical Information”).</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>4. How we collect Information</h4>
+            <b>Cookies</b>
+            <p>When you use our Product or visit our Web sites, any of them may place a cookie within the memory of your Internet access device. A cookie is a small piece of information that a website can store via your Internet access device for later retrieval. We may use permanent cookies or server-side constructs to help us track use of our services by users, such as the number and frequency of visits to our pages and which parts of our product are visited.</p>
+            <b>Service Registration</b>
+            <p>When you use agree our Product or Service, we collect any information that we required you submit through Service’s registration form. This information will be use to create  user’s account to use 1PAC Company’s Services or Product.</p>
+            <b>Product Usage</b>
+            <p>When you log in to the Product(s), we collect and store information that you submit, generate during your usage through the Web site, mobile application.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>5. Our Disclosure of Personal Information</h4>
+            <p>We will not sell, license, trade or rent your Personal Information. 1PAC Company will not otherwise disclose your Personal Information except as described within this Policy and within the 1PAC Company Terms and Conditions between 1PAC Company and your company. The 1PAC Company is not responsible for the information you disclose while using the Product.</p>
+            <p>We may disclose the information we receive if required by law, such as to comply with a subpoena, or similar legal process, or in response to a government request. We also may be required to disclose Personal Information in response to a lawful request by public authorities in efforts to meet national security or law enforcement requirements. In addition, we may disclose aggregate Personal Information and other data in connection with any merger, acquisition, debt financing, sale of 1PAC Company assets, or other business transaction in which data could be transferred to third parties as one of our business assets. Additionally, we may share your Personal Information with third parties when we have your consent to do so.</p>
+            <p>1PAC Company will never be liable to you or another individual for any loss or damages you or another individual may experience due to your displaying, posting, uploading, storing, exchanging or transmitting on or through the 1PAC Company’ Web sites or Product any Personal Information about you or a third party.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>6. Transparency and Choice</h4>
+            <p>You do not have to provide us with any Personal Information. If you choose not to, we may not be able to provide the Service to you. If you are an End User of the Service and would not want getting marketing communications from us, please follow the unsubscribe instructions included in each marketing email or contact us with the information we provide below.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>7. Updating Your Personal Information</h4>
+            <p>If you are an end user of the Product, you can change your account information from your profile page, which is accessible from the Punch website, whenever you like. You may also be able to request us or your Punch owner at your company to delete (your data will be completely removed from our database when you submit your delete request) your Personal Information by emailing us at <a href="support@1pac.com">support@1pac.com</a>. We will respond to your request within 7 days, when permitted by law. We will take all reasonable steps to correct your Personal Information. We will retain your information for as long as your account is active or as needed to provide you the Service. We will retain and use your information as necessary to comply with our legal obligations, resolve disputes, and enforce our agreements.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>8. Data Security</h4>
+            <p>1PAC Company has established a privacy program designed to help respect and protect your data privacy rights. We maintain administrative, technical and physical safeguards intended to protect against the loss, misuse, unauthorized access, alteration, or disclosure of Personal Information. Although we take such precautions seriously, it is impossible for us to guarantee the safety and security of Personal Information. We cannot ensure or warrant the security of any information.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>9. Updating This Privacy Notice</h4>
+            <p>We may update this Privacy Policy from time to time. When we do, we will also revise the “last updated” date at the bottom of this page. If and when we make changes, you will be notified by email, through the Service, or by posting a prominent notice on our Website at or prior to the change becoming effective. We encourage you to review this Privacy Policy periodically to stay informed on our privacy practices. Your continued use of our Service or Website constitutes your agreement to be bound by such changes to this Statement. Your only remedy, if you do not accept the terms of this Statement, is to discontinue use of our Service and our Websites.</p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h4>10. Contacting Us</h4>
+            <p>Questions about our Products, Services, or privacy practices can be directed to contact@1pac.vn or information provide below:</p>
+            <table>
+              <tbody>
+                <tr>
+                  <th>Company Name</th>
+                  <td>1PAC Vietnam Co.,LTD</td>
+                </tr>
+                <tr>
+                  <th>Address</th>
+                  <td>6th floor, Jabes 1 Building,  244 Cong Quynh, Ward Pham Ngu Lao, District 1, Ho Chi Minh City, 70000, Vietnam</td>
+                </tr>
+                <tr>
+                  <th>Version</th>
+                  <td>1.0</td>
+                </tr>
+                <tr>
+                  <th>Last Updated</th>
+                  <td>May 21, 2018.</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </li>
       </ol>
