--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'Punch') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_title, 'Support | Punch') %>
+<%= provide(:page_description, 'Punch Support team is always ready to answer any and all questions you may have.') %>
 <%= provide(:page_url, help_url) %>
 
 <% content_for(:header) do %>
