--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, '404 not found') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_title, '404 Page | Punch') %>
+<%= provide(:page_description, 'The web page you looking for does not exist.') %>
 <%= provide(:page_url, root_url) %>
 
 <% content_for(:header) do %>
