--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'Punch') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_title, 'Terms | Punch') %>
+<%= provide(:page_description, 'Punch Terms and Conditions') %>
 <%= provide(:page_url, terms_url) %>
 
 <% content_for(:header) do %>
