--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'Home | Punch') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_title, 'Log In | Punch') %>
+<%= provide(:page_description, 'Log in to Punch') %>
 <%= provide(:page_url, login_url) %>
 
 <% content_for(:meta) do %>
