--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:page_title, 'Home | Punch') %>
-<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_description, 'Attendance management toolkit that help leveling-up your team with easy to track statistics.') %>
 <%= provide(:page_url, root_url) %>
 
 <% content_for(:header) do %>
