--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'New Password | Punch') %>
-<%= provide(:page_description, 'Apply new password') %>
+<%= provide(:page_title, 'Forgot Password? | Punch') %>
+<%= provide(:page_description, 'Forgot your Punch password?') %>
 <%= provide(:page_url, password_reset_url) %>
 
 <% content_for(:meta) do %>
