--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:page_title, 'Password Reset | Punch') %>
-<%= provide(:page_description, 'Reset your password') %>
+<%= provide(:page_description, 'Reset your Punch password') %>
 <%= provide(:page_url, root_url) %>
 
 <% content_for(:meta) do %>
