--- a/app/assets/stylesheets/modules/_document.scss
+++ b/app/assets/stylesheets/modules/_document.scss
@@ -14,6 +14,7 @@
   }
 
   h1,
+  h3,
   h4,
   ol,
   li {
@@ -22,6 +23,13 @@
 
   h1 {
     padding: 2.4rem .8rem;
+    color: $dark-color;
+    background-color: $light-color;
+    text-align: center;
+  }
+
+  h3 {
+    padding: 1.6rem;
     color: $dark-color;
     background-color: $light-color;
     text-align: center;
