--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -49,6 +49,18 @@
   }
 }
 
+.contact-mh {
+  height: calc(100vh - 3.2rem - 4.4rem);
+
+  @include respond-to-smaller-tablet() {
+    height: calc(100vh - 3.2rem - 7.6rem);;
+  }
+
+  @include respond-to-mobile() {
+    height: auto;
+  }
+}
+
 .section-title {
   margin-bottom: 3.2rem;
   text-align: center;
@@ -88,3 +100,5 @@
   max-width: 100%;
   margin-bottom: 1rem;
 }
+
+.description-link { font-size: 1.2rem; }
