Add contact us link to header & footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <section class="navbar-section">
         <ul class="footer-utility">
           <li><a href="http://1pac.vn">About</a></li>
-          <li><a href="mailto:1pac.info@1pac.vn">Contact us</a></li>
+          <li><%= link_to "Contact us", contact_path, class: "navbar-link" %></li>
           <li><%= link_to "Terms", terms_path, class: "navbar-link" %></li>
           <li><%= link_to "Privacy", privacy_path, class: "navbar-link" %></li>
         </ul>
