--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
-<%= provide(:page_title, 'Punch') %>
-<%= provide(:page_description, 'Punch description') %>
-<%= provide(:page_url, privacy_url) %>
+<%= provide(:page_title, 'Contact Us | Punch') %>
+<%= provide(:page_description, 'Punch contact') %>
+<%= provide(:page_url, contact_url) %>
 
 <% content_for(:header) do %>
 <%= render 'shared/header' %>
