--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -26,6 +26,7 @@
         <ul class="navbar-utilities">
           <li><%= link_to "Features", features_path, class: "navbar-link" %></li>
           <li><%= link_to "Help", help_path, class: "navbar-link" %></li>
+          <li><%= link_to "Contact Us", contact_path, class: "navbar-link" %></li>
         </ul>
         <button class="btn btn-signin navbar-link">Sign In</button>
       </div>
