--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:page_title, 'Features | Punch') %>
-<%= provide(:page_description, 'Increase attendance efficiency of your team lightweight tools and features Punch provide.'%>
+<%= provide(:page_description, 'Increase attendance efficiency of your team lightweight tools and features Punch provide.')%>
 <%= provide(:page_url, features_url) %>
 
 <% content_for(:header) do %>
