Remove useless html id

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -10,11 +10,11 @@
 <%= render 'shared/footer' %>
 <% end %>
 
-<div id="main" class="main main-mt-0">
+<div class="main main-mt-0">
   <div class="contact bg-linear-blue">
     <div class="container contact-container">
       <h1 class="text-center">Contact Us</h1>
-      <h3 class="text-center">Have a question, found a bug, or wish us did something more? Let us know! Also, be sure to check out our <%= link_to 'Features page.', features_path, class: 'description-link' %></h3>
+      <p class="text-center">Have a question, found a bug, or wish us did something more? Let us know! Also, be sure to check out our <%= link_to 'Features page.', features_path %></p>
 
       <div class="contact-form">
         <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSfFe0wAmMMPM0W6BWbTMGHrj0FMRH4-CE8WHkC43COmwhgNYA/formResponse" target="_self" method="POST" id="mG61Hd">
