--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -14,7 +14,7 @@
 <%= render 'shared/chat_tawk_to' %>
 <% end %>
 
-<div id="main" class="main">
+<div class="main">
   <section class="description">
     <p class="text-center text-blue">Features</p>
     <h2 class="section-title">Some fancy introdution<br>about features</h2>
