--- a/app/views/pages/page_403.html.erb
+++ b/app/views/pages/page_403.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<div id="main" class="main pt-40 pb-80">
+<div class="main pt-40 pb-80">
   <div class="container text-center">
     <img class="img-error" src="<%= asset_url('403.png') %>" alt="403 image">
     <h2>Well, we’re not going anywhere today, Captain!</h2>
