--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -6,7 +6,7 @@
 <%= render 'shared/header' %>
 <% end %>
 
-<div id="main" class="main pt-40 pb-80">
+<div class="main pt-40 pb-80">
   <div class="container text-center">
     <img class="img-error" src="<%= asset_url('404.png') %>" alt="404 image">
     <h2>Nothing to see here, Captain!</h2>
