--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -10,7 +10,7 @@
 <%= render 'shared/footer' %>
 <% end %>
 
-<div id="main" class="main">
+<div class="main">
   <div class="document privacy">
     <h1>Privacy Policies</h1>
     <div class="document-container">
