--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -10,7 +10,7 @@
 <%= render 'shared/footer' %>
 <% end %>
 
-<div id="main" class="main">
+<div class="main">
   <div class="document">
     <h1>Term of use Punch's Services</h1>
     <div class="document-container">
