--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -14,7 +14,7 @@
 <%= render 'shared/chat_tawk_to' %>
 <% end %>
 
-<div id="main" class="main main-mt-0">
+<div class="main main-mt-0">
   <div class="hero bg-linear-blue">
     <div class="container">
       <div class="hero-content">
