--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -31,7 +31,7 @@
           <%= error_message(@user.errors, :password_confirmation) %>
         </div>
         <div class="form-group">
-          <%= f.submit t('password_reset.edit.reset_password'), class: 'btn btn-primary btn-block' %>
+          <%= f.submit t('password_reset.edit.reset_password'), class: 'btn btn-block' %>
         </div>
       <% end %>
     </div>
