--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -29,7 +29,7 @@
           <%= f.email_field :email, class: 'form-input', placeholder: t('password_reset.new.email') %>
         </div>
         <div class="form-group">
-          <%= f.submit t('password_reset.new.send_link'), class: 'btn btn-primary btn-block' %>
+          <%= f.submit t('password_reset.new.send_link'), class: 'btn btn-block' %>
         </div>
       <% end %>
     </div>
