--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:page_title, 'Contact Us | Punch') %>
-<%= provide(:page_description, 'Punch contact') %>
+<%= provide(:page_title, 'Contact to Punch') %>
+<%= provide(:page_description, 'Have a question, found a bug, or wish us did something more? Let us know!') %>
 <%= provide(:page_url, contact_url) %>
 
 <% content_for(:header) do %>
-<%= render 'shared/top_header' %>
+<%= render partial: 'shared/header', locals: { nav_id: 'index-nav' } %>
 <% end %>
 
 <% content_for(:footer) do %>
@@ -25,17 +25,17 @@
 
           <div class="form-group">
             <label class="form-label">Name</label>
-            <input type="text" class="form-input" autocomplete="off" name="entry.690197780" value="" required="" placeholder="Name">
+            <input type="text" class="form-input" autocomplete="off" name="entry.690197780" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label">Email</label>
-            <input type="email" class="form-input" autocomplete="off" name="entry.486098797" value="" required="" placeholder="Email">
+            <input type="email" class="form-input" autocomplete="off" name="entry.486098797" value="" required>
           </div>
 
           <div class="form-group">
             <label class="form-label">Message</label>
-            <textarea class="form-input" name="entry.1118070560" required="" placeholder="Message..."></textarea>
+            <textarea class="form-input" name="entry.1118070560" required="" placeholder></textarea>
           </div>
 
           <div class="form-group">
