--- a/app/views/pages/page_403.html.erb
+++ b/app/views/pages/page_403.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:header) do %>
-<%= render 'shared/header' %>
+<%= render partial: 'shared/header', locals: { nav_klass: 'nav-inverse' } %>
 <% end %>
 
 <div class="main pt-40 pb-80">
