--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:page_title, '404 Page | Punch') %>
+<%= provide(:page_title, '404 page not found') %>
 <%= provide(:page_description, 'The web page you looking for does not exist.') %>
 <%= provide(:page_url, root_url) %>
 
 <% content_for(:header) do %>
-<%= render 'shared/header' %>
+<%= render partial: 'shared/header', locals: { nav_klass: 'nav-inverse' } %>
 <% end %>
 
 <div class="main pt-40 pb-80">
