--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:page_title, 'Privacy Policy | Punch') %>
+<%= provide(:page_title, 'Privacy Policy of Punch') %>
 <%= provide(:page_description, 'Punch Privacy Policy') %>
 <%= provide(:page_url, privacy_url) %>
 
 <% content_for(:header) do %>
-<%= render 'shared/header' %>
+<%= render partial: 'shared/header', locals: { nav_klass: 'nav-inverse' } %>
 <% end %>
 
 <% content_for(:footer) do %>
