--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:page_title, 'Terms | Punch') %>
+<%= provide(:page_title, 'Terms of Punch') %>
 <%= provide(:page_description, 'Punch Terms and Conditions') %>
 <%= provide(:page_url, terms_url) %>
 
 <% content_for(:header) do %>
-<%= render 'shared/header' %>
+<%= render partial: 'shared/header', locals: { nav_klass: 'nav-inverse' } %>
 <% end %>
 
 <% content_for(:footer) do %>
