--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:page_title, 'Home | Punch') %>
-<%= provide(:page_description, 'Difficult to manage employee attendance ?, Our Punch is here to help making it as easy as ever with our managing solution.') %>
+<%= provide(:page_title, 'Punch: Simple attendance mangement application ') %>
+<%= provide(:page_description, 'Difficult to manage employee attendance ?, Punch is here to help making it as easy as ever with our managing solution.') %>
 <%= provide(:page_url, root_url) %>
 
 <% content_for(:header) do %>
-<%= render 'shared/top_header' %>
+<%= render partial: 'shared/header', locals: { nav_id: 'index-nav' } %>
 <% end %>
 
 <% content_for(:footer) do %>
@@ -22,10 +22,7 @@
           <div class="hero-introduction-text">
             <h1 class="hero-title">Difficult to manage employee attendance ?</h1>
             <p>Our Punch is here to help making it as easy as ever with our managing solution.</p>
-            <div class="input-group">
-              <input type="email" class="form-input input-lg" placeholder="Enter your email!">
-              <button class="btn btn-primary input-group-btn btn-lg">Try it free</button>
-            </div>
+            <%= link_to 'Get Started', get_started_url, class: 'btn btn-get-started navbar-link' %>
           </div>
         </div>
         <div class="hero-img">
@@ -239,13 +236,5 @@
     </div>
   </div>
 
-  <div class="trial bg-linear-blue">
-    <div class="trial-content">
-      <h2 class="trial-title">Free trial up to 30 days sign up now !</h2>
-      <div class="input-group">
-        <input type="email" class="form-input input-lg" placeholder="Enter your email!">
-        <button class="btn btn-primary input-group-btn btn-lg">Try it free</button>
-      </div>
-    </div>
-  </div>
+  <%= render 'shared/get_started_block' %>
 </div>
