Update style a bit

--- a/app/assets/stylesheets/modules/_base.scss
+++ b/app/assets/stylesheets/modules/_base.scss
@@ -2,6 +2,7 @@ body {
   font-family: $base-font-family;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  color: $color-darker;
 }
 
 a {
