Fix content a bit

--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:page_title, 'Terms of Punch') %>
-<%= provide(:page_description, 'Punch Terms and Conditions') %>
+<%= provide(:page_title, 'Terms of Service - Punch') %>
+<%= provide(:page_description, 'Punch Terms of Service') %>
 <%= provide(:page_url, terms_url) %>
 
 <% content_for(:header) do %>
@@ -12,7 +12,7 @@
 
 <div class="main">
   <div class="document">
-    <h1>Term of use Punch's Services</h1>
+    <h1>Terms of Service</h1>
     <div class="document-container">
       <ol>
         <li>
