--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,4 +1,4 @@
-<%= provide(:page_title, 'Privacy Policy of Punch') %>
+<%= provide(:page_title, 'Privacy Policy - Punch') %>
 <%= provide(:page_description, 'Punch Privacy Policy') %>
 <%= provide(:page_url, privacy_url) %>
 
@@ -12,7 +12,7 @@
 
 <div class="main">
   <div class="document privacy">
-    <h1>Privacy Policies</h1>
+    <h1>Privacy Policy</h1>
     <div class="document-container">
       <ol>
         <li>
